fix: reduce footer z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -77,7 +77,7 @@
   background: #ffffff no-repeat;
   background-size: 100% 100%;
   min-height: 80px;
-  z-index: 10000;
+  z-index: 1202;
   display: flex;
   flex-direction: row;
   margin-top: auto;
